fix spelling error

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = django-allbymyself
 version = 0.1
-description = A Django app that procides an abstract model of a singleton object.
+description = A Django app that provides an abstract model of a singleton object.
 long_description = file: README.md
 url = https://github.com/greydevv/django-allbymyself
 author = Greyson Murray
