specify long descrip type

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ name = django-allbymyself
 version = 1.0.0
 description = A Django app that provides an abstract model of a singleton object.
 long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/greydevv/django-allbymyself
 author = Greyson Murray
 author_email = greysonmurray.dev@gmail.com
